tests/paczka1/small_fuzzy/79626864.err
Error in line 3: TZbNb S990 7,4
Error in line 2: C84EGo A128 93,3
Error in line 9: A128 S330 43,8
